//buildscript {
//	repositories {
//		jcenter()
//	}
//
//	dependencies {
//		classpath 'com.bmuschko:gradle-clover-plugin:3.0.1'
//	}
//}

plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}
//apply plugin: 'com.bmuschko.clover'

group = 'pl.bartlomiejstepien.mcsm'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
	mavenCentral()
}

dependencies {
	implementation ('org.springframework.boot:spring-boot-starter-thymeleaf') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation ('org.springframework.boot:spring-boot-starter-web') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'

	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'

	implementation 'net.lingala.zip4j:zip4j:2.6.1'
	implementation 'com.github.t9t.minecraft-rcon-client:minecraft-rcon-client:1.0.0'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
	implementation 'org.liquibase:liquibase-core:4.2.2'
//	clover 'org.openclover:clover:4.4.1'
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation('org.springframework.security:spring-security-test')

	runtimeOnly 'com.h2database:h2:1.4.200'
}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

test {
	useJUnitPlatform()
}
